src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>AB2__ABAccountID__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>FatTail to Provide.</inlineHelpText>
        <label>AB Account ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AB2__ABAccountType__c</fullName>
        <label>AB Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Client</fullName>
                </value>
                <value>
                    <fullName>Agency</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AB2__Active__c</fullName>
        <label>Active</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AB_Account_ID_DC_Account_ID__c</fullName>
        <formula>AB2__ABAccountID__c =  HW_Account_DoubleClick_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AB Account ID = DC Account ID</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Health_Description__c</fullName>
        <label>Account Health Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Account_Health_Reason__c</fullName>
        <label>Account Health Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Green - Renew/Upsell</fullName>
                    <color>#33CC00</color>
                    <label>Green - Renew/Upsell</label>
                </value>
                <value>
                    <fullName>Yellow - Attempting to Renew/Risk</fullName>
                    <color>#FFFF66</color>
                    <label>Yellow - Attempting to Renew/Risk</label>
                </value>
                <value>
                    <fullName>Red - Cancel/Downgrade</fullName>
                    <color>#FF0000</color>
                    <label>Red - Cancel/Downgrade</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Health__c</fullName>
        <label>Account Health</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>White</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Owner_Email__c</fullName>
        <description>Used by the Invoice process to include the sales team on the invoice emails</description>
        <formula>IF ( ISBLANK( Strategic_Account_RD_Override__c ), Metrostudy_Sales_Region_Assignment_RD__r.Employee_Email__c,  Strategic_Account_RD_Override__r.Email )</formula>
        <label>Account Owner Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Status__c</fullName>
        <label>Account Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Client</fullName>
                </value>
                <value>
                    <fullName>Previous Client</fullName>
                </value>
                <value>
                    <fullName>Prospect</fullName>
                    <default>true</default>
                    <label>Prospect</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <label>Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Prospect</fullName>
                </value>
                <value>
                    <fullName>Briefing Sponsor</fullName>
                </value>
                <value>
                    <fullName>Customer - Subscription</fullName>
                </value>
                <value>
                    <fullName>Customer - Quarterly Membership</fullName>
                </value>
                <value>
                    <fullName>Customer - Consulting</fullName>
                </value>
                <value>
                    <fullName>Customer - Custom Export/Report</fullName>
                </value>
                <value>
                    <fullName>Customer - Database Access</fullName>
                </value>
                <value>
                    <fullName>Customer - Web Account</fullName>
                </value>
                <value>
                    <fullName>Customer - Multiple Purchase types</fullName>
                </value>
                <value>
                    <fullName>Customer - Pending Cancellation</fullName>
                </value>
                <value>
                    <fullName>Customer - Restructured</fullName>
                </value>
                <value>
                    <fullName>Former Customer - Cancelled</fullName>
                </value>
                <value>
                    <fullName>Former Customer - Went w/Competitor</fullName>
                </value>
                <value>
                    <fullName>Former Customer - Non-Payment</fullName>
                </value>
                <value>
                    <fullName>Former Customer - Dispute</fullName>
                </value>
                <value>
                    <fullName>Former Customer - Unknown Reason</fullName>
                </value>
                <value>
                    <fullName>Competitor</fullName>
                </value>
                <value>
                    <fullName>Duplicate - pls. merge with original</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Win Back Prospect</fullName>
                </value>
                <value>
                    <fullName>Win Back Client</fullName>
                </value>
                <value>
                    <fullName>Customer - Strategic Account</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Agency_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Second agency tied to account</description>
        <label>Agency - 2</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts (Agency - 2)</relationshipLabel>
        <relationshipName>Accounts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agency</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts (as Agency)</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Authorized_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Authorized Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BPM_Region__c</fullName>
        <label>BPM Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BPM - National</fullName>
                </value>
                <value>
                    <fullName>BPM - Northeast</fullName>
                </value>
                <value>
                    <fullName>BPM - Southeast</fullName>
                </value>
                <value>
                    <fullName>BPM - West</fullName>
                </value>
                <value>
                    <fullName>BPM -  Midwest</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BPM_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BPM Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_Contact_Address2__c</fullName>
        <label>Billing Contact Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Contact_City2__c</fullName>
        <label>Billing Contact City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Contact_Country2__c</fullName>
        <label>Billing Contact Country</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Contact_Email__c</fullName>
        <label>Billing Contact Email</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Billing_Contact_State_Province2__c</fullName>
        <label>Billing Contact State/Province</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Contact_Text__c</fullName>
        <label>Billing Contact Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Billing_Contact_Zip_Code2__c</fullName>
        <label>Billing Contact Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Billing Contact</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1</booleanFilter>
            <filterItems>
                <field>$Source.Id</field>
                <operation>equals</operation>
                <valueField>Contact.Account.Id</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Billing Contact)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_Delivery_Method__c</fullName>
        <label>Billing Delivery Method</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Email__c</fullName>
        <label>Billing Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Billing_Fax__c</fullName>
        <label>Billing Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Billing_Notes__c</fullName>
        <label>Billing Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Billing_Phone_Ext__c</fullName>
        <label>Billing Phone Ext</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Phone_Number__c</fullName>
        <label>Billing Phone Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Billing_Phone__c</fullName>
        <label>Billing Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Billing_Type__c</fullName>
        <label>Billing Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Barter</fullName>
                </value>
                <value>
                    <fullName>Credit Card</fullName>
                </value>
                <value>
                    <fullName>Deferred</fullName>
                </value>
                <value>
                    <fullName>House</fullName>
                </value>
                <value>
                    <fullName>Installment Bill</fullName>
                </value>
                <value>
                    <fullName>Intercompany EX</fullName>
                </value>
                <value>
                    <fullName>Intercompany MKT</fullName>
                </value>
                <value>
                    <fullName>Invoice</fullName>
                </value>
                <value>
                    <fullName>Media Credits</fullName>
                </value>
                <value>
                    <fullName>Non-Cash Revenue</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Pre-Bill</fullName>
                </value>
                <value>
                    <fullName>zIB-Emedia Only</fullName>
                </value>
                <value>
                    <fullName>zIB-Print Only</fullName>
                </value>
                <value>
                    <fullName>zIB-Print/Emedia Combined</fullName>
                </value>
                <value>
                    <fullName>zIntercompany Transfer - (P)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Broker_Logo_URL__c</fullName>
        <label>Broker Logo URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Broker_Logo_URL_formula__c</fullName>
        <formula>Land_Broker__r.Broker_Logo_URL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Broker Logo URL (from Land Broker)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brokerage_Display_Name__c</fullName>
        <inlineHelpText>Used as the Brokerage Firm Name in Zonda for Land Listings</inlineHelpText>
        <label>Brokerage Display Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brokerage_Display_Name_formula__c</fullName>
        <formula>Land_Broker__r.Name</formula>
        <label>Brokerage Display Name (from LandBroker)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brokerage_Website__c</fullName>
        <inlineHelpText>Used in Zonda as the Brokerage Website link for Land Listings</inlineHelpText>
        <label>Brokerage Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Brokerage_Website_formula__c</fullName>
        <formula>Land_Broker__r.Brokerage_Website__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Brokerage Website (from Land Broker)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Builder_200__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Member of 2012 Builder 200</inlineHelpText>
        <label>Builder 200?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bulk_Email_Tag__c</fullName>
        <label>Bulk Email Tag</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>2017-18 Media Customer</fullName>
                </value>
                <value>
                    <fullName>AI All</fullName>
                </value>
                <value>
                    <fullName>AI Cur</fullName>
                </value>
                <value>
                    <fullName>AL All</fullName>
                </value>
                <value>
                    <fullName>AL Cur</fullName>
                </value>
                <value>
                    <fullName>All Cust</fullName>
                </value>
                <value>
                    <fullName>All Media</fullName>
                </value>
                <value>
                    <fullName>All Media Cur</fullName>
                </value>
                <value>
                    <fullName>AL Past</fullName>
                </value>
                <value>
                    <fullName>AR All</fullName>
                </value>
                <value>
                    <fullName>AR All Digital</fullName>
                </value>
                <value>
                    <fullName>AR All Print</fullName>
                </value>
                <value>
                    <fullName>AR BPM</fullName>
                </value>
                <value>
                    <fullName>Arch</fullName>
                </value>
                <value>
                    <fullName>Arch/ArchLight</fullName>
                </value>
                <value>
                    <fullName>Arch/Eco Cust</fullName>
                </value>
                <value>
                    <fullName>Arch/Light List</fullName>
                </value>
                <value>
                    <fullName>Arch/ResArch</fullName>
                </value>
                <value>
                    <fullName>ArchLight</fullName>
                </value>
                <value>
                    <fullName>Arch Past</fullName>
                </value>
                <value>
                    <fullName>AR Cust</fullName>
                </value>
                <value>
                    <fullName>AR List</fullName>
                </value>
                <value>
                    <fullName>AR Past</fullName>
                </value>
                <value>
                    <fullName>BD All</fullName>
                </value>
                <value>
                    <fullName>BD Cur</fullName>
                </value>
                <value>
                    <fullName>BPM 5.4.16</fullName>
                </value>
                <value>
                    <fullName>BPM List</fullName>
                </value>
                <value>
                    <fullName>BPM New List</fullName>
                </value>
                <value>
                    <fullName>BPM Pro</fullName>
                </value>
                <value>
                    <fullName>Builder/Eco</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CORPORATE_CUSTOMER_TAG__c</fullName>
        <label>Corporate Customer Tag</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Marketing Group - 2013</fullName>
                </value>
                <value>
                    <fullName>Marketing Group - 2014</fullName>
                </value>
                <value>
                    <fullName>Marketing Group - 2015</fullName>
                </value>
                <value>
                    <fullName>Marketing Group - 2016</fullName>
                </value>
                <value>
                    <fullName>Marketing Group -2017</fullName>
                </value>
                <value>
                    <fullName>Marketing Group - 2018</fullName>
                </value>
                <value>
                    <fullName>Marketing Group - 2019</fullName>
                </value>
                <value>
                    <fullName>Marketing Group - 2020</fullName>
                </value>
                <value>
                    <fullName>Media - 2011</fullName>
                </value>
                <value>
                    <fullName>Media - 2012</fullName>
                </value>
                <value>
                    <fullName>Media - 2013</fullName>
                </value>
                <value>
                    <fullName>Media - 2014</fullName>
                </value>
                <value>
                    <fullName>Media - 2015</fullName>
                </value>
                <value>
                    <fullName>Media - 2016</fullName>
                </value>
                <value>
                    <fullName>Media - 2017</fullName>
                </value>
                <value>
                    <fullName>Media - 2018</fullName>
                </value>
                <value>
                    <fullName>Media - 2019</fullName>
                </value>
                <value>
                    <fullName>Media - 2020</fullName>
                </value>
                <value>
                    <fullName>Metrostudy - 2008</fullName>
                </value>
                <value>
                    <fullName>Metrostudy - 2009</fullName>
                </value>
                <value>
                    <fullName>Metrostudy - 2010</fullName>
                </value>
                <value>
                    <fullName>Metrostudy - 2011</fullName>
                </value>
                <value>
                    <fullName>Metrostudy - 2012</fullName>
                </value>
                <value>
                    <fullName>Metrostudy - 2013</fullName>
                </value>
                <value>
                    <fullName>Metrostudy - 2014</fullName>
                </value>
                <value>
                    <fullName>Metrostudy - 2015</fullName>
                </value>
                <value>
                    <fullName>Metrostudy - 2016</fullName>
                </value>
                <value>
                    <fullName>Metrostudy - 2017</fullName>
                </value>
                <value>
                    <fullName>Metrostudy - 2018</fullName>
                </value>
                <value>
                    <fullName>Metrostudy - 2019</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_Number__c</fullName>
        <label>Client Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Risk_Rating__c</fullName>
        <description>Green - Solid relationship 
Yellow - Some risk 
Red - Cancellation risk</description>
        <inlineHelpText>Green - Solid relationship 
Yellow - Some risk 
Red - Cancellation risk</inlineHelpText>
        <label>Client Risk Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Green - Solid relationship</fullName>
                    <color>#33CC00</color>
                    <label>Green - Solid relationship</label>
                </value>
                <value>
                    <fullName>Yellow - Some risk</fullName>
                    <color>#FFFF66</color>
                    <label>Yellow - Some risk</label>
                </value>
                <value>
                    <fullName>Red - Cancellation risk</fullName>
                    <color>#FF0000</color>
                    <label>Red - Cancellation risk</label>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CongaTemplateId__c</fullName>
        <formula>IF( Max_Days_Open__c &gt;=45 &amp;&amp; Max_Days_Open__c &lt;=59,&quot;a0n2T000004wUzh&quot;, 
   IF( Max_Days_Open__c &gt;=60 &amp;&amp; Max_Days_Open__c &lt;=74,&quot;a0n2T000004wUzr&quot;,
      IF( Max_Days_Open__c &gt;=75 &amp;&amp; Max_Days_Open__c &lt;=89,&quot;a0n2T000004wUzr&quot;,
         IF( Max_Days_Open__c &gt;=90 &amp;&amp; Max_Days_Open__c &lt;=104,&quot;a0n2T000004wUzw&quot;,
            IF( Max_Days_Open__c &gt;=105 &amp;&amp; Max_Days_Open__c &lt;=119,&quot;a0n2T000004wUzw&quot;,
              IF( Max_Days_Open__c &gt;=120,&quot;a0n2T000004wUzw&quot;,&quot;&quot; ))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CongaTemplateId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Converted_from_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Converted from Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Corporate_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Media Corporate or Strategic Account</description>
        <inlineHelpText>Media Corporate or Strategic Account</inlineHelpText>
        <label>Key Media Marketing Accounts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Credit_Status__c</fullName>
        <label>Credit Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ACTIVE</fullName>
                </value>
                <value>
                    <fullName>ON_HOLD</fullName>
                </value>
                <value>
                    <fullName>CREDIT_STOP</fullName>
                </value>
                <value>
                    <fullName>INACTIVE</fullName>
                </value>
                <value>
                    <fullName>BLOCKED</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Spend__c</fullName>
        <description>The annual contract(s) amount for this account.</description>
        <inlineHelpText>Annual dollar amount of contracts.</inlineHelpText>
        <label>Current Spend</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Custom_Export__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Custom Export-See Details in Notes Section</description>
        <label>Custom Export</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Key__c</fullName>
        <label>HIP Customer Key</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Logo_URL__c</fullName>
        <inlineHelpText>Paste shared dropbox link here.  Update dl=0 at the end of the link to raw=1.</inlineHelpText>
        <label>Customer Logo URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>DFP_Advertiser_ID_Unique__c</fullName>
        <description>Pulls value from DFP Advertiser ID to ensure it is unique to SFDC</description>
        <externalId>true</externalId>
        <label>DFP Advertiser ID Unique</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>D_B_Industry__c</fullName>
        <description>Custom field for use with Data.com. Field will be synced with Industry from Data.com to prevent Data.com overwriting the standard Industry field.</description>
        <label>D&amp;B Industry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D_U_N_S__c</fullName>
        <label>D-U-N-S Number</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DataTrax_ID__c</fullName>
        <label>DataTrax ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Account Details Captured&quot;, &quot;Missing: &quot;&amp;IF( ISPICKVAL( Industry,&quot;&quot;),&quot;Industry, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(ISPICKVAL(Rating,&quot;&quot;), &quot;Rating, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(BillingCity) = 0, &quot;Complete Address, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Phone) = 0, &quot;Phone, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL(Type,&quot;&quot;), &quot;Type&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( ISPICKVAL(Industry,&quot;&quot;), 0,20) + IF( ISPICKVAL(Rating,&quot;&quot;), 0,20) + IF( LEN(BillingCity) = 0, 0,20) + IF(LEN(Phone) = 0, 0,20) + IF( ISPICKVAL(Type,&quot;&quot;), 0,20)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_Added_to_Metroclient__c</fullName>
        <label>Date Added to Metroclient</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Cancellation__c</fullName>
        <label>Date of Cancellation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_in_Metroclient__c</fullName>
        <label>Days in Metroclient</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Developer_Name__c</fullName>
        <label>Developer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emails_to_Receive_Invoices__c</fullName>
        <description>Emails for Contact(s) associated with the Account that have the Receives Invoices box checked.</description>
        <label>Emails to Receive Invoices</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emails_to_Receive_Invoices_formula__c</fullName>
        <formula>Emails_to_Receive_Invoices__c</formula>
        <label>Emails to Receive Invoices</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Epicor_ID__c</fullName>
        <label>Epicor ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Executive_Sponsor__c</fullName>
        <description>Executive Sponsor</description>
        <inlineHelpText>Do not use Executive Sponsor</inlineHelpText>
        <label>Legacy Executive Sponsor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Dave MacIntosh</fullName>
                </value>
                <value>
                    <fullName>David Brown</fullName>
                </value>
                <value>
                    <fullName>Sean Wilt</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FC_MAPG_Status__c</fullName>
        <label>(FC) MAPG Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Current</fullName>
                </value>
                <value>
                    <fullName>Past</fullName>
                </value>
                <value>
                    <fullName>Future</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FC_Opportunity_Last_Sent_To_Zuora__c</fullName>
        <label>(FC) Opportunity Last Sent To Zuora</label>
        <summarizedField>Opportunity.FC_Last_Sent_To_Zuora__c</summarizedField>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>FC_Ultimate_Parent_Account_ID_Formula__c</fullName>
        <formula>IF(ISBLANK(FC_Ultimate_Parent_Account__c),  CASESAFEID(Id), CASESAFEID(FC_Ultimate_Parent_Account__c))</formula>
        <label>(FC) Ultimate Parent Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FC_Ultimate_Parent_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>(FC) Ultimate Parent Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts ((FC) Ultimate Parent Account)</relationshipLabel>
        <relationshipName>Related_Accounts_by_Ultimate_Parent</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FRAME_Ineligible__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This will be checked when a company should not receive FRAME invites.</description>
        <inlineHelpText>Check this box when a company should not receive FRAME invites.</inlineHelpText>
        <label>FRAME Ineligible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year_End__c</fullName>
        <label>Fiscal Year End</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>January</fullName>
                </value>
                <value>
                    <fullName>February</fullName>
                </value>
                <value>
                    <fullName>March</fullName>
                </value>
                <value>
                    <fullName>April</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>June</fullName>
                </value>
                <value>
                    <fullName>July</fullName>
                </value>
                <value>
                    <fullName>August</fullName>
                </value>
                <value>
                    <fullName>September</fullName>
                </value>
                <value>
                    <fullName>October</fullName>
                </value>
                <value>
                    <fullName>November</fullName>
                </value>
                <value>
                    <fullName>December</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>